# rustyspike

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  out.vevt  out.vmsk  rust-toolchain.toml
.github/workflows/: bench.yml  ci.yml  docs.yml  ffi-header.yml  release-artifacts.yml
Morphics/: SUMMARY.md  book.toml  challenge.md  quick-start.md
Morphics/architecture/: README.md  why-architecture-matters.md
Morphics/cli-workflows/: README.md  compile-run-viz.md  nir-workflow.md
Morphics/introduction/: README.md  brain-vs-computer.md  first-network.md  learning-without-forgetting.md  time-as-computation.md  what-are-spikes.md
archive/legacy-hsnn-20250822/: Cargo.toml  README.md
archive/legacy-hsnn-20250822/docs/: architecture.md  implementation-plan.md
archive/legacy-hsnn-20250822/src/: lib.rs  prelude.rs
archive/legacy-hsnn-20250822/src/core/: mod.rs  spike.rs  time.rs
archive/legacy-hsnn-20250822/src/utils/: error.rs  mod.rs
crates/shnn-cli/: Cargo.toml  results.json
crates/shnn-cli/src/: config.rs  error.rs  lib.rs  main.rs  workspace.rs
crates/shnn-cli/src/commands/: hg.rs  init.rs  inspect.rs  mod.rs  nir.rs  snapshot.rs  study.rs  train.rs  ttr.rs  viz.rs
crates/shnn-cli/tests/: nir_compile.rs  nir_negative.rs  snapshot_roundtrip.rs
crates/shnn-compiler/: Cargo.toml
crates/shnn-compiler/src/: lib.rs  passes.rs
crates/shnn-compiler/tests/: compile_with_passes_ok.rs  nir_parity_roundtrip.rs  verify_bounds.rs
crates/shnn-core/: Cargo.toml
crates/shnn-core/examples/: connectivity_showcase.rs
crates/shnn-core/src/: async_processing.rs  encoding.rs  error.rs  lib.rs  math.rs  neuron.rs  serialization.rs  spike.rs  test_helpers.rs  time.rs
crates/shnn-core/src/connectivity/: graph.rs  hypergraph.rs  matrix.rs  mod.rs  plastic_enum.rs  sparse.rs  types.rs
crates/shnn-core/src/network/: builder.rs  mod.rs  stats.rs
crates/shnn-core/tests/: integration.rs  plastic_runtime.rs
crates/shnn-embedded/: Cargo.toml
crates/shnn-embedded/src/: embedded_memory.rs  embedded_network.rs  embedded_neuron.rs  error.rs  fixed_point.rs  hal.rs  lib.rs  partitioning.rs
crates/shnn-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/shnn-ffi/include/: shnn_ffi.h
crates/shnn-ffi/src/: c_bindings.rs  hardware.rs  lib.rs  types.rs  utils.rs
crates/shnn-ffi/tests/: c_abi_smoke.rs  integration.rs
crates/shnn-ir/: Cargo.toml
crates/shnn-ir/src/: lib.rs
crates/shnn-ir/tests/: roundtrip_synapse_connect.rs
crates/shnn-lockfree/src/: atomic.rs  lib.rs  queue.rs
crates/shnn-math/: Cargo.toml
crates/shnn-math/src/: activation.rs  approx.rs  lib.rs  math.rs  matrix.rs  sparse.rs  stats.rs  vector.rs
crates/shnn-micro/: Cargo.toml  README.md
crates/shnn-micro/src/: connectivity.rs  fixed_point.rs  lib.rs  network.rs  neuron.rs  time.rs
crates/shnn-runtime/: Cargo.toml
crates/shnn-runtime/benches/: snn_runtime_bench.rs
crates/shnn-runtime/src/: error.rs  lib.rs  network.rs  neuron.rs  plasticity.rs  simulation.rs
crates/shnn-serialize/src/: binary.rs  neural.rs  proto.rs
crates/shnn-storage/: Cargo.toml
crates/shnn-storage/src/: error.rs  file.rs  ids.rs  lib.rs  memory.rs  schemas.rs  traits.rs  vcsr.rs  vevt.rs  vmsk.rs
docs/: CURRENT_STATE.md  EMBEDDED_OPTIMIZATION_PLAN.md  README.md  ROADMAP.md
docs/architecture/: BINARY_SCHEMAS.md  CLI_FIRST_ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_GUIDE.md  NIR_DIALECTS_AND_VERSIONING.md  THIN_WAIST_TRAITS.md
docs/development/: EMBEDDED_NO_STD_PLAN.md  FFI-ABI.md  RFC-0001-Determinism-Modes.md
docs/getting-started/: README.md
docs/release/: RELEASE_CHECKLIST.md
examples/: README.md
examples/storage-vevt/: Cargo.toml
examples/storage-vevt/src/: main.rs
examples/storage-vmsk/: Cargo.toml
examples/storage-vmsk/src/: main.rs
