[package]
name = "shnn-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SNN runtime engine for the CLI-first neuromorphic research substrate"

[dependencies]
# Storage layer dependency
shnn-storage = { path = "../shnn-storage" }

# Essential dependencies
thiserror = { workspace = true }
log = { workspace = true }

# Math and numerics
rand = { workspace = true }
rayon = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, optional = true }

# For no-std compatibility
heapless = { workspace = true, optional = true }

[features]
default = ["std", "parallel"]
std = []
no-std = ["heapless", "shnn-storage/no-std"]
parallel = ["rayon"]
serde = ["dep:serde", "shnn-storage/serde"]

[dev-dependencies]
tempfile = "3.8"
proptest = { workspace = true }
criterion = { workspace = true }