[package]
name = "shnn-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Storage layer and binary schemas for the CLI-first SNN framework"

[dependencies]
# Essential dependencies
thiserror = { workspace = true }
log = { workspace = true }

# Serialization and I/O
serde = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }

# Memory mapping and file I/O
memmap2 = "0.9"

# Checksums and compression
crc32fast = "1.4"
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }

# For no-std compatibility
heapless = { workspace = true, optional = true }

[features]
default = ["std", "serde", "compression"]
std = []
no-std = ["heapless"]
serde = ["dep:serde", "dep:bincode"]
compression = ["lz4_flex", "zstd"]
mmap = []

[dev-dependencies]
tempfile = "3.8"
proptest = { workspace = true }